Hiding Unused Sockets does not remove panels when all sockets are hidden #112588

Closed
opened 2023-09-19 18:16:52 +02:00 by Simon Thommes · 4 comments
Member

System Information
Operating system: Linux-6.5.3-gentoo-r1-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.104.05

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-18 16:18, hash: 05c053cd2564
Worked: (newest version of Blender that worked as expected)

Short description of error
image

Exact steps for others to reproduce the error

  • select Principled BSDF
  • ctrl + h
**System Information** Operating system: Linux-6.5.3-gentoo-r1-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.104.05 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-18 16:18, hash: `05c053cd2564` Worked: (newest version of Blender that worked as expected) **Short description of error** ![image](/attachments/268af086-328a-4026-8281-4fe461b47e69) **Exact steps for others to reproduce the error** - select Principled BSDF - ctrl + h
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-19 18:16:53 +02:00

Not sure if this is expected to check this as bug..
@LukasTonne

Not sure if this is expected to check this as bug.. @LukasTonne
Author
Member

I mentioned it to @dfelinto and he added it here: #112506

I mentioned it to @dfelinto and he added it here: #112506

Seems confirmed then.

Seems confirmed then.
Member

This bug was also mentioned in #112490
cc @LukasTonne

This bug was also mentioned in #112490 cc @LukasTonne
Lukas Tönne self-assigned this 2023-09-20 09:29:22 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-28 11:25:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112588
No description provided.